<resources>
    <string name="app_name">WellFed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="back_to_login">Back to login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="create_an_account">Create an account</string>
    <string name="title_activity_camera">CameraActivity</string>
</resources>