<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".UI.RegisterActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textColor="#08A159"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/username"
        android:background="#30ffffff"
        android:drawableStart="@drawable/person_silhouette"
        android:drawablePadding="20sp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/email"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_alternate_email_24"
        android:drawablePadding="20sp"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|text"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/password"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20sp"
        android:hint="@string/password"
        android:inputType="text|textPassword"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="24dp"
        android:autofillHints="Confirm Password"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20sp"
        android:hint="@string/confirm_password"
        android:inputType="text|textPassword"
        android:padding="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/StapleGreen"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        app:layout_constraintVertical_bias="0.345" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToLoginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/StapleGreen"
        android:text="@string/back_to_login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        app:layout_constraintVertical_bias="0.345" />

</androidx.constraintlayout.widget.ConstraintLayout>